Kubernetes/KubernetesDocs/Revamp/Topic-6-Ingress/todo-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todoapp-backend
  name: todoapp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-backend
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: todoapp-backend
    spec:
      containers:
      - image: inspirationapp/todo-backend:dev3
        name: todo-backend
        ports:
        - containerPort: 3000
