Kubernetes/KubernetesDocs/Revamp/Topic-6-Ingress/todo-client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todoapp-client
  name: todoapp-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-client
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: todoapp-client
    spec:
      containers:
      - image: inspirationapp/todo-client:dev3
        name: todo-client
        ports:
        - containerPort: 5173
