Kubernetes/KubernetesDocs/Revamp/Topic-6-Ingress/todobackend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todobackend-svc
  name: todobackend-svc
spec:
  ports:
  - name: 80-3000
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: todoapp-backend
  type: NodePort
