Kubernetes/KubernetesDocs/Revamp/Topic-6-Ingress/todoclient-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todoclient-svc
  name: todoclient-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5173
  selector:
    app: todoapp-client
  type: NodePort
